force-app/main/default/objects/Case/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <formula>IF(
NOT(ISBLANK(External_System_ID__c)), External_System_ID__c,
IF(
NOT(ISBLANK(ClickUp_Task_Id__c)),  ClickUp_Task_Id__c ,
Internal_System_ID__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>