force-app/main/default/objects/Case/fields/ClickUp_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>ClickUp_Task_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ClickUp Task Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>