force-app/main/default/objects/Case/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>