force-app/main/default/objects/Case/fields/cowsoft__Checklist__c.field-meta.xml
<CustomField>
    <fullName>cowsoft__Checklist__c</fullName>
    <label>Checklist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>