force-app/main/default/objects/Case/fields/cowsoft__Estimated_Size__c.field-meta.xml
<CustomField>
    <fullName>cowsoft__Estimated_Size__c</fullName>
    <label>Estimated Size</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>