force-app/main/default/objects/Case/fields/cowsoft__Remaining_Size__c.field-meta.xml
<CustomField>
    <fullName>cowsoft__Remaining_Size__c</fullName>
    <label>Remaining Size</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>