force-app/main/default/objects/Case/fields/Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time__c</fullName>
    <label>Estimated Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>