force-app/main/default/objects/Case/fields/External_System_URL__c.field-meta.xml
<CustomField>
    <fullName>External_System_URL__c</fullName>
    <description>Stores link to an external system issue</description>
    <label>External System URL</label>
    <type>Url</type>
</CustomField>