force-app/main/default/objects/Case/fields/Favro_Card__c.field-meta.xml
<CustomField>
    <fullName>Favro_Card__c</fullName>
    <label>Favro Card #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>