force-app/main/default/objects/Case/fields/Filtering_Period__c.field-meta.xml
<CustomField>
    <fullName>Filtering_Period__c</fullName>
    <description>Is used to set the Kanban Board timeframe in months / days</description>
    <inlineHelpText>Set the date you would like the Case to be filtered by in Kanban board by entering value</inlineHelpText>
    <label>Filtering Period</label>
    <type>Date</type>
</CustomField>