force-app/main/default/objects/Case/fields/Help_Needed__c.field-meta.xml
<CustomField>
    <fullName>Help_Needed__c</fullName>
    <label>Help Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin Help Needed</fullName>
            </value>
            <value>
                <fullName>Developer Help Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>