force-app/main/default/objects/Case/fields/Internal_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_System_ID__c</fullName>
    <label>Internal System ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>