force-app/main/default/objects/Case/fields/Time_Left__c.field-meta.xml
<CustomField>
    <fullName>Time_Left__c</fullName>
    <formula>IF
(
AND(
Estimated_Time__c &gt; 0,
NOT(ISBLANK(Estimated_Time__c))),
Estimated_Time__c - Time_Spent__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Left</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>