force-app/main/default/objects/Case/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <label>Time Spent</label>
    <summarizedField>Timecard__c.Effort__c</summarizedField>
    <summaryForeignKey>Timecard__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>