force-app/main/default/objects/Case/fields/Time_Spent_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_This_Month__c</fullName>
    <label>Time Spent This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>