force-app/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>