force-app/main/default/objects/Case/listViews/Global_RADAR.listView-meta.xml
<ListView>
    <fullName>Global_RADAR</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>GlobalRadar</value>
    </filters>
    <label>Global RADAR</label>
</ListView>